feat: openapi docs for orders
