# cmd/api-gateway/routes/orders.go
@@ -2,7 +2,9 @@ package routes
 
 import (
 	"fmt"
+	"log"
 	"net/http"
+	"strconv"
 
 	"github.com/kelcheone/chemistke/cmd/utils"
 	order_proto "github.com/kelcheone/chemistke/pkg/grpc/order"
@@ -15,13 +17,14 @@ type OrderServer struct {
 	OrderClient order_proto.OrderServiceClient
 }
 
+// Order represents the data required and returned by the Order Service endpoints
 type Order struct {
-	Id        string  `json:"id"`
-	ProductId string  `json:"product_id"`
-	UserId    string  `json:"user_id"`
-	Status    string  `json:"status"`
-	Quantity  int32   `json:"quantity"`
-	Total     float32 `json:"total"`
+	Id        string  `json:"id"         example:"62e9e179-3aaa-4dd5-a098-21f20da10f90"`
+	ProductId string  `json:"product_id" example:"62e9e179-3aaa-4dd5-a098-21f20da10f90" binding:"required"`
+	UserId    string  `json:"user_id"    example:"62e9e179-3aaa-4dd5-a098-21f20da10f90" binding:"required"`
+	Status    string  `json:"status"     example:"pending"`
+	Quantity  int32   `json:"quantity"   example:"10"                                   binding:"required"`
+	Total     float32 `json:"total"      example:"100"                                  binding:"required"`
 }
 
 type IdReq struct {
@@ -49,6 +52,18 @@ func ConnectOrdersServer(link string) (*OrderServer, func(), error) {
 	}, nil
 }
 
+// CreateOrder godoc
+// @Summary create an order in the system
+// @Description create a new order.
+// @Tags Orders
+// @Accept json
+// @Produce json
+// @Param order body Order true "Oder info to create"
+// @Success 201 {Object} Order "Successfly created a product"
+// @Failure 400 {object} HTTPError "Invalid input data"
+// @Failure 500 {object} HTTPError "Internal server error"
+// @Security BearerAuth
+// @Router /orders [post]
 func (o *OrderServer) CreateOrder(c echo.Context) error {
 	var order Order
 
@@ -57,6 +72,8 @@ func (o *OrderServer) CreateOrder(c echo.Context) error {
 			Message: err.Error(),
 		})
 	}
+
+	// TODO: Calculate the total based on the price of a product
 
 	nOrder := &order_proto.OrderProductRequest{
 		ProductId: &order_proto.UUID{Value: order.ProductId},
@@ -74,6 +91,18 @@ func (o *OrderServer) CreateOrder(c echo.Context) error {
 	return c.JSON(http.StatusCreated, resp)
 }
 
+// GetOrder godoc
+// @Summary Get an order by id
+// @Description Get order by id
+// @Tags Orders
+// @Accept json
+// @Produce json
+// @Param id path string true "Oder ID"
+// @Success 200 {Object} Order "Successfly fetched order"
+// @Failure 400 {object} HTTPError "Invalid input data"
+// @Failure 500 {object} HTTPError "Internal server error"
+// @Security BearerAuth
+// @Router /orders/{id} [get]
 func (o *OrderServer) GetOrder(c echo.Context) error {
 	id := c.Param("id")
 
@@ -101,26 +130,58 @@ type PaginatedReq struct {
 	Limit int32  `json:"limit"`
 }
 
+// GetUserOrder godoc
+// @Summary Get a users' orders
+// @Description Get orders for a given user
+// @Tags Orders
+// @Accept json
+// @Produce json
+// @Param id query string true "User ID"
+// @Param page query int true "PaginatedReq Page"
+// @Param limit query int true "PaginatedReq limit"
+// @Success 201 {Object} Order "Successfly fetched user orders"
+// @Failure 400 {object} HTTPError "Invalid input data"
+// @Failure 500 {object} HTTPError "Internal server error"
+// @Security BearerAuth
+// @Router /orders/user [get]
 func (o *OrderServer) GetUserOders(c echo.Context) error {
-	var req PaginatedReq
-
-	if err := c.Bind(&req); err != nil {
+	id := c.QueryParam("id")
+	if id == "" {
 		return c.JSON(http.StatusBadRequest, ErrResponse{
-			Message: "invalid Request",
+			Message: "invalid request",
+		})
+	}
+	page := c.QueryParam("page")
+
+	n_page, err := strconv.Atoi(page)
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, ErrResponse{
+			Message: "invalid request",
 		})
 	}
 
+	limit := c.QueryParam("limit")
+
+	n_limit, err := strconv.Atoi(limit)
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, ErrResponse{
+			Message: "invalid request",
+		})
+	}
 	claims := utils.ExtractClaimsFromRequest(c)
-	if claims.Id != req.Id || !claims.Admin {
+	if claims.Id != id || !claims.Admin {
 		return c.JSON(http.StatusUnauthorized, ErrResponse{
 			Message: "not authorized to perform this action",
 		})
 	}
 
+	log.Println("--------------------------------------------------------")
+	log.Println("id: ", id)
+
 	nReq := &order_proto.GetUserOrdersRequest{
-		UserId: &order_proto.UUID{Value: req.Id},
-		Limit:  req.Limit,
-		Page:   req.Page,
+		UserId: &order_proto.UUID{Value: id},
+		Limit:  int32(n_limit),
+		Page:   int32(n_page),
 	}
 
 	resp, err := o.OrderClient.GetUserOrders(c.Request().Context(), nReq)
@@ -132,6 +193,19 @@ func (o *OrderServer) GetUserOders(c echo.Context) error {
 	return c.JSON(http.StatusOK, resp)
 }
 
+// GetOrders godoc
+// @Summary Get  orders
+// @Description Get orders
+// @Tags Orders
+// @Accept json
+// @Produce json
+// @Param page query int true "PaginatedReq Page"
+// @Param limit query int true "PaginatedReq limit"
+// @Success 201 {Object} Order "Successfly fetched orders"
+// @Failure 400 {object} HTTPError "Invalid input data"
+// @Failure 500 {object} HTTPError "Internal server error"
+// @Security BearerAuth
+// @Router /orders [get]
 func (o *OrderServer) GetOders(c echo.Context) error {
 	claims := utils.ExtractClaimsFromRequest(c)
 	if !claims.Admin {
@@ -140,17 +214,27 @@ func (o *OrderServer) GetOders(c echo.Context) error {
 		})
 	}
 
-	var req PaginatedReq
+	page := c.QueryParam("page")
 
-	if err := c.Bind(&req); err != nil {
+	n_page, err := strconv.Atoi(page)
+	if err != nil {
 		return c.JSON(http.StatusBadRequest, ErrResponse{
-			Message: err.Error(),
+			Message: "invalid request",
+		})
+	}
+
+	limit := c.QueryParam("limit")
+
+	n_limit, err := strconv.Atoi(limit)
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, ErrResponse{
+			Message: "invalid request",
 		})
 	}
 
 	nReq := &order_proto.GetOrdersRequest{
-		Limit: req.Limit,
-		Page:  req.Page,
+		Limit: int32(n_limit),
+		Page:  int32(n_page),
 	}
 
 	resp, err := o.OrderClient.GetOrders(c.Request().Context(), nReq)
@@ -163,6 +247,18 @@ func (o *OrderServer) GetOders(c echo.Context) error {
 	return c.JSON(http.StatusOK, resp)
 }
 
+// UpdateOrder godoc
+// @Summary update a given order
+// @Description update an order.
+// @Tags Orders
+// @Accept json
+// @Produce json
+// @Param order body Order true "Oder info to create"
+// @Success 201 {Object} Order  "Oder Successfly updated"
+// @Failure 400 {object} HTTPError "Invalid input data"
+// @Failure 500 {object} HTTPError "Internal server error"
+// @Security BearerAuth
+// @Router /orders [patch]
 func (o *OrderServer) UpdateOrder(c echo.Context) error {
 	var order Order
 
@@ -196,6 +292,18 @@ func (o *OrderServer) UpdateOrder(c echo.Context) error {
 	return c.JSON(http.StatusNoContent, resp)
 }
 
+// DeleteOrder godoc
+// @Summary Delete order
+// @Description Delete order by id
+// @Tags Orders
+// @Accept json
+// @Produce json
+// @Param id path string true "Order Id"
+// @Success 201 {Object} Order "Successfly deleted order"
+// @Failure 400 {object} HTTPError "Invalid input data"
+// @Failure 500 {object} HTTPError "Internal server error"
+// @Security BearerAuth
+// @Router /orders/{id} [delete]
 func (o *OrderServer) DeleteOrder(c echo.Context) error {
 	id := c.Param("id")
 
